[gd_scene load_steps=7 format=3 uid="uid://dvk5dwhlql61a"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_ghs2g"]
[ext_resource type="Texture2D" uid="uid://chv0ge0is5vfq" path="res://icon.svg" id="2_p62cm"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_u04x3"]
bounce = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_8bybs"]
radius = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a8d5c"]
albedo_texture = ExtResource("2_p62cm")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1swb1"]
height = 0.2
radius = 0.6

[node name="player" type="RigidBody3D"]
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_u04x3")
gravity_scale = 1.5
script = ExtResource("1_ghs2g")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
top_level = true

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
transform = Transform3D(-4.37114e-08, -0.766044, 0.642788, 0, 0.642788, 0.766044, -1, 3.34849e-08, -2.80971e-08, 4, 5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_8bybs")

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]
material_override = SubResource("StandardMaterial3D_a8d5c")
radius = 0.8
radial_segments = 24
rings = 12

[node name="jumpArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="jumpArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.914068, 0)
shape = SubResource("CylinderShape3D_1swb1")

[node name="jumpTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="jumpTimer" to="." method="_on_jump_timer_timeout"]
